Fix problem with redo/undo on field updates